# home-energy-monitoring

./: .flake8  .gitignore  LICENSE  README.md  hemon.cfg.example.yaml  pyproject.toml
.github/workflows/: build-dist.yaml  build.yml
docker/: README.md  grafana-dashboard-example.json  grafana-dashboard.yml  grafana-datasource.yml  mosquitto.conf  mosquitto.pwfile  pgadmin4.servers.json  setup-stack-services.sh  stack.example.yml
sql/: sample_data.sql  schema.sql
src/hemon/: app.py  config.py  db.py
systemctl/: README.md  hemon_mqtt_to_tsdb.service
tests/: test_configuration.py  test_configuration_logconfig.py  test_db.py  test_handle_message.py  test_integration.py  test_load_data.py
tests/data/: cfg.log_example.yaml  cfg.non_parseable.yaml  hemon.cfg.yaml  int.tests.cfg.yaml  msg.known_sensor_no_parameters.yaml  msg.known_sensor_with_parameters.yaml  msg.no_sensors.yaml
