[project]
name = "home-energy-monitoring"
description = "Home Energy Monitoring - MQTT to TimescleDB application and Grafana reports"
version = "0.1.0"
authors = [
    { name = "Petri Ahola", email = "petri.ahola@hukassa.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "psycopg"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy"
]
tests = [
    "pytest",
    "pytest-cov"
]

[project.urls]
repository = "https://github.com/petromap/home-energy-monitoring.git"

[build-system]
requires = ["setuptools >= 62"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-fail-under 95"

[tool.coverage.run]
source = ["src"]

[tool.black]
line-length = 127
diff = true
color = true

[tool.isort]
profile = "black"
honor_noqa = true
color_output = true
src_paths = ["src", "tests"]
skip_gitignore = true

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true

warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0114"

[tool.pylint.'FORMAT']
max-line-length = 127

[tool.pylint.'SIMILARITIES']
ignore-comments = true
ignore-docstrings = true